--- a/portal/views/policies/compliance_view.njk
+++ b/portal/views/policies/compliance_view.njk
@@ -4,17 +4,24 @@
 {% from "govuk/components/select/macro.njk" import govukSelect %}
 {% extends "policies/policy.njk" %}
 {% block policy_content %}
+
+{% if isFiltered %}
+<div class="govuk-inset-text">
+  Showing results for {{ activeFilterCount }} active filters.
+  <a href="{{ url }}" class="govuk-link">Reset all filters</a>
+</div>
+{% endif %}
+
 <details class="govuk-details" data-module="govuk-details">
     <summary class="govuk-details__summary">Filter Options</summary>
     <form method="get" class="govuk-form">
-        {% for queryParam in queryParams %}<input aria-hidden type="hidden" name="{{queryParam.key}}" value="{{queryParam.value}}">{% endfor %}
         {{ govukInput({
             inputmode: "search",
             label: { text: "Search"},
             name: "search",
             value: queryParams["search"]
         }) }}
-        {% for field in filterable_fields %}
+        {% for field in filterableFields %}
         {{ govukSelect({
             label: { text: field.name },
             id: field.id,
@@ -33,7 +40,7 @@
     <thead class="govuk-table__head">
         <tr class="govuk-table__row">
             <th class="govuk-table__header">Resource</th>
-            {% for field in prominent_fields %}<th class="govuk-table__header">{{field}}</th>{% endfor %}
+            {% for field in prominentFields %}<th class="govuk-table__header">{{field}}</th>{% endfor %}
             <th class="govuk-table__header" style="width: 100px;"></th>
         </tr>
     </thead>
@@ -43,27 +50,33 @@
                 <td class="govuk-table__cell">
                     <details class="govuk-details govuk-!-margin-bottom-0" data-module="govuk-details">
                         <summary class="govuk-details__summary">
-                            <span class="govuk-details__summary-text">{{ resource[id_field] }}</span>
+                            <span class="govuk-details__summary-text">{{ resource[idField] }}</span>
                         </summary>
                         <table class="govuk-details__text govuk-table govuk-!-margin-bottom-0 govuk-!-margin-top-2">
                             <tbody class="govuk-table__body">
                                 <tr class="govuk-table__row">
                                     <td class="govuk-table__cell govuk-!-padding-left-2"><strong>Resource ID</strong></td>
-                                    <td class="govuk-table__cell govuk-!-padding-left-2">{{ resource[id_field] }}</td>
+                                    <td class="govuk-table__cell govuk-!-padding-left-2">{{ resource[idField] }}</td>
                                 </tr>
-                                {% for field in details_fields %}
+                                {% for field in detailsFields %}
                                 <tr class="govuk-table__row">
                                     <td class="govuk-table__cell govuk-!-padding-left-2"><strong>{{ field }}</strong></td>
                                     <td class="govuk-table__cell govuk-!-padding-left-2">{{ resource[field] }}</td>
                                 </tr>
                                 {% endfor %}
+                                {% if "linked_view" in resource %}
+                                <tr class="govuk-table__row">
+                                    <td class="govuk-table__cell govuk-!-padding-left-2"><a href="/compliance/view/{{resource["linked_view"]}}?Id={{resource[idField]}}">Extra Details</a></td>
+                                    <td></td>
+                                </tr>
+                                {% endif %}
                             </tbody>
                         </table>
                     </details>
                 </td>
-                {% for field in prominent_fields %}<td class="govuk-table__cell">{{ resource[field] }}</td>{% endfor %}
+                {% for field in prominentFields %}<td class="govuk-table__cell">{{ resource[field] }}</td>{% endfor %}
                 <td class="govuk-table__cell govuk-!-padding-bottom-1 govuk-!-padding-top-1">
-                    <button class="govuk-button govuk-button--secondary govuk-!-margin-bottom-0" onclick="navigator.clipboard.writeText('{{ resource[id_field] }}')" title="Copy ID">Copy ID</button>
+                    <button class="govuk-button govuk-button--secondary govuk-!-margin-bottom-0" onclick="navigator.clipboard.writeText('{{ resource[idField] }}')" title="Copy ID">Copy ID</button>
                 </td>
             </tr>
         {% endfor %}
