Created compliant/non-compliant pattern and implemented for tagging and kms

--- a/portal/views/policies/compliance_rule.njk
+++ b/portal/views/policies/compliance_rule.njk
@@ -13,22 +13,39 @@
     <summary class="govuk-details__summary">Options</summary>
     <form method="get" class="govuk-form">
         {{ govukSelect({
-                    label: { text: "Group results by" },
-                    id: "groupby",
-                    name: "groupby",
-                    items: groupByItems
+            label: { text: "Group results by" },
+            id: "groupby",
+            name: "groupby",
+            items: groupByItems
+        }) }}
+        {{ govukSelect({
+            label: { text: "View Options" },
+            id: "viewopts",
+            name: "viewopts",
+            items: [
+                { value: "non_compliant_only", text: "Non Compliant Only", selected: viewOpts == "non_compliant_only" },
+                { value: "all", text: "All", selected: viewOpts == "all" }
+            ]
         }) }}
         {{ govukButton({ text: "Update" }) }}
     </form>
 </details>
 {% for table in tables %}
-    {{ govukTable({
-        attributes: { id: table.name },
-        caption: table.longName,
-        captionClasses: "govuk-table__caption--m",
-        firstCellIsHeader: false,
-        head: header,
-        rows: table.rows
-    }) }}
+    <table id="{{table.name}}" class="govuk-table">
+        <caption class="govuk-table__caption govuk-table__caption--m"><b style="color: var({{table.details.colorVar}});">[{{ table.details.status }}]</b> {{table.longName}}</caption>
+        <caption class="govuk-table__caption govuk-table__caption--s">{{table.details.compliantCount}} out of {{table.details.count}} Resources are Compliant</caption>
+        <thead class="govuk-table__head">
+            <tr class="govuk-table__row">
+                {% for name in header %}<th class="govuk-table__header">{{name}}</th>{% endfor %}
+            </tr>
+        </thead>
+        <tbody class="govuk-table__body">
+            {% for row in table.rows %}
+                <tr class="govuk-table__row">
+                    {% for column in row %}<td class="govuk-table__cell">{{ column | safe }}</td>{% endfor %}
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
 {% endfor %}
 {% endblock %}
