Remove unused components, and improve ui

--- a/portal/views/policies/compliance_rule_summary.njk
+++ b/portal/views/policies/compliance_rule_summary.njk
@@ -1,6 +1,6 @@
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/select/macro.njk" import govukSelect %}
-{% extends "policies/policy.njk" %}
+{% extends "policies/compliance_layout.njk" %}
 {% block policy_content %}
 <details class="govuk-details" data-module="govuk-details">
     <summary class="govuk-details__summary">Options</summary>
