--- a/portal/views/policies/compliance_view.njk
+++ b/portal/views/policies/compliance_view.njk
@@ -2,7 +2,7 @@
 {% from "govuk/components/input/macro.njk" import govukInput %}
 {% from "govuk/components/pagination/macro.njk" import govukPagination %}
 {% from "govuk/components/select/macro.njk" import govukSelect %}
-{% extends "policies/policy.njk" %}
+{% extends "policies/compliance_layout.njk" %}
 {% block policy_content %}
 
 {% if isFiltered %}
