--- a/portal/views/policies/compliance_rule.njk
+++ b/portal/views/policies/compliance_rule.njk
@@ -1,7 +1,7 @@
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/select/macro.njk" import govukSelect %}
 {% from "govuk/components/table/macro.njk" import govukTable %}
-{% extends "policies/policy.njk" %}
+{% extends "policies/compliance_layout.njk" %}
 {% block policy_content %}
 <p class="govuk-body">
     <strong>Jump to </strong>
